docs: update contract description
