# open-api/swagger.json
@@ -125,9 +125,6 @@
                       "key": {
                         "type": "string"
                       },
-                      "limit": {
-                        "type": "number"
-                      },
                       "tags": {
                         "type": "array",
                         "items": {
@@ -139,9 +136,10 @@
                       }
                     },
                     "required": [
-                      "collection"
+                      "collection",
+                      "key"
                     ],
-                    "description": "Context settings"
+                    "description": "Embedding context options"
                   },
                   "text": {
                     "type": "string",
@@ -181,7 +179,7 @@
     "/findSimilar": {
       "get": {
         "description": "Find similiar text chunks",
-        "summary": "Generate text complection",
+        "summary": "Find similiar text chunks",
         "tags": [
           "RAG"
         ],
@@ -189,7 +187,7 @@
           {
             "name": "context",
             "in": "query",
-            "description": "Context settings",
+            "description": "Context query",
             "required": true,
             "style": "deepObject",
             "schema": {
@@ -199,8 +197,11 @@
                   "type": "string",
                   "description": "The collection name"
                 },
-                "key": {
-                  "type": "string"
+                "keys": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
                 },
                 "limit": {
                   "type": "number"
@@ -233,7 +234,7 @@
         "operationId": "findSimilar",
         "responses": {
           "200": {
-            "description": "200",
+            "description": "List of similar text chunks",
             "content": {
               "application/json": {
                 "schema": {
@@ -253,7 +254,8 @@
                       "payload",
                       "score"
                     ]
-                  }
+                  },
+                  "description": "List of similar text chunks"
                 }
               }
             }
@@ -289,8 +291,11 @@
                         "type": "string",
                         "description": "The collection name"
                       },
-                      "key": {
-                        "type": "string"
+                      "keys": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        }
                       },
                       "limit": {
                         "type": "number"
@@ -308,7 +313,7 @@
                     "required": [
                       "collection"
                     ],
-                    "description": "Context settings"
+                    "description": "Context query"
                   },
                   "options": {
                     "type": "object",
@@ -444,7 +449,7 @@
   "info": {
     "title": "RAG Service API",
     "version": "0.2.0",
-    "description": "RAG - RCP server",
+    "description": "RAG API Service",
     "contact": {
       "name": "JB"
     }
